[package]
name = "litris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lighthouse-client = { version = "0.5", features = ["tokio"] }
tokio = { version = "1.21", features = ["rt", "macros", "time"] }
futures = "0.3"
tracing = "0.1"
rand = "0.8"
itertools = "0.10"
arrayvec = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
