[package]
name = "litris"
version = "1.0.4"
description = "Tetris-inspired game for Project Lighthouse"
edition = "2021"
license = "MIT"
repository = "https://github.com/fwcd/litris"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lighthouse-client = { version = "6.2.0", features = ["tokio"] }
tokio = { version = "1.21", features = ["rt", "macros", "time"] }
futures = "0.3"
tracing = "0.1"
rand = "0.9"
itertools = "0.14.0"
arrayvec = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15.7"
anyhow = "1.0.97"
